@@ -320,7 +320,7 @@ public class AcademicAdminOfficeImprovementBolonhaStudentEnrolmentDA extends
         @Override
         public StudentCurriculumGroupBean create(final CurriculumGroup curriculumGroup,
                 final ExecutionInterval executionInterval) {
-            return new StudentCurriculumGroupBean(curriculumGroup, executionInterval, null) {
+            return new StudentCurriculumGroupBean(curriculumGroup, executionInterval) {
 
                 @Override
                 protected List<IDegreeModuleToEvaluate> buildCourseGroupsToEnrol(CurriculumGroup group,
@@ -377,7 +377,7 @@ public class AcademicAdminOfficeImprovementBolonhaStudentEnrolmentDA extends
 
                 @Override
                 protected List<StudentCurriculumGroupBean> buildCurriculumGroupsEnroled(CurriculumGroup parentGroup,
-                        ExecutionInterval executionInterval, int[] curricularYears) {
+                        ExecutionInterval executionInterval) {
 
                     final List<StudentCurriculumGroupBean> result = new ArrayList<StudentCurriculumGroupBean>();
 
