@@ -1,3 +1,5 @@
+- Fix: ExecutionInterval method overloading dispatching
+
 6.8.0 (10-03-2020)
 - Refactor: Upgraded dependency of fenixedu-academic-core (Removed deprecated relation between PrecedentDegreeInformation and Registration)
 
